Prepares for discovery feature
